chore: other accets

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <img src="./static/imgs/man.png">
     </div>
 
-    <script src="./dist/built.js"></script>
+    <span class="iconfont icon-right"></span>
+
+    <span class="iconfont icon-kefu"></span>
 </body>
 </html>
