chore: dynamic import p&& prefetch

--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
     <span class="iconfont icon-right"></span>
 
     <span class="iconfont icon-kefu"></span>
+
+    <button id="btn">click to load utils</button>
 </body>
 </html>
